Create a admin domain
