# backend/src/routes/cost.routes.ts
@@ -2,15 +2,12 @@ import express, { Router } from "express";
 import {
   calculateCostAndTime,
   getPricingInfo,
-  getUserCurrentProject,
 } from "../controllers/cost.controller";
-import { optionalAuth } from "../packages/middleware/optionalAuth";
-import isAuthenticated from "../packages/middleware/isAuthenticated";
 
 const router: Router = express.Router();
 
-router.get("/pricing", getPricingInfo);
-router.post("/project-cost-calculation", optionalAuth, calculateCostAndTime);
-router.get("/user-project/:userId", isAuthenticated,getUserCurrentProject);
+router.get("/cost/pricing", getPricingInfo);
+router.post("/cost/calculate", calculateCostAndTime);
+
 
 export default router;
