# backend/src/routes/user.routes.ts
@@ -1,0 +1,18 @@
+import express, { Router } from "express";
+import { isAdmin } from "../packages/middleware/authorizeRoles";
+import {
+  deleteUser,
+  getAllUsers,
+  getUserDetails,
+  updateUserAndProfile,
+} from "../controllers/user.controller";
+import isAuthenticated from "../packages/middleware/isAuthenticated";
+
+const router: Router = express.Router();
+
+router.get("/user", isAuthenticated, isAdmin, getAllUsers);
+router.get("/user/:id", getUserDetails);
+router.patch("/user/:id", updateUserAndProfile);
+router.delete("/user/:id", deleteUser);
+
+export default router;
